--- a/autosys-docker-postgres/docker-compose.yml
+++ b/autosys-docker-postgres/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       # 共享系统配置
       - /etc/sysctl.conf:/etc/sysctl.conf:ro,cached
     # 环境变量
+    environment:
+      POSTGRES_INITDB_ARGS: "-E UTF8 --lc-collate=zh_CN.UTF-8 --lc-ctype=zh_CN.UTF-8 --lc-messages=zh_CN.UTF-8 --lc-monetary=zh_CN.UTF-8 --lc-numeric=zh_CN.UTF-8 --lc-time=zh_CN.UTF-8"
     env_file:
      - ./.env_vars/.env_db_pg
     # 指定设备映射关系
