--- a/autosys-docker-postgres/.env_vars/.env_db_pg
+++ b/autosys-docker-postgres/.env_vars/.env_db_pg
@@ -5,4 +5,4 @@ POSTGRES_PASSWORD=ysyh!9Sky
 # 数据库库名
 POSTGRES_DB=autosys
 # 允许所有主机连接
-POSTGRES_HOST_AUTH_METHOD=trust
+# POSTGRES_HOST_AUTH_METHOD=trust
