--- a/autosys-docker-mysql/.env_vars/.env_db_mysql
+++ b/autosys-docker-mysql/.env_vars/.env_db_mysql
@@ -3,7 +3,7 @@ DB_SERVER_HOST=mysql
 # 数据库端口号
 DB_SERVER_PORT=3306
 # 数据库用户名
-MYSQL_USER=xiaonuo
+MYSQL_USER=autosys
 # 数据库用户密码
 MYSQL_PASSWORD=ysyh!9Sky
 # 数据库超级用户密码
