--- a/autosys-docker-mysql/docker-compose.yml
+++ b/autosys-docker-mysql/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
 
   # 服务名
@@ -82,6 +81,8 @@ services:
     image: danxiaonuo/autosys:latest
     # 共享主机PID
     pid: host
+    # 共享主机命名空间
+    ipc: host
     # 覆盖容器启动后默认执行的命令
     # command: /sbin/init
     # 允许容器中运行一些特权命令
